--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,15 +1,32 @@
 format = """
-$directory$git_branch$git_status
+$username at $hostname in $directory$git_branch
 $character"""
+
+[username]
+style_user = "bold yellow"
+format = "[$user](bold yellow)"
+
+[hostname]
+style = "bold green"
+ssh_only = false
+format = "[$hostname](bold green)"
 
 [directory]
 style = "cyan"
+truncate_to_repo = false
+truncation_length = 5
+format = "[$path](cyan)"
 
 [git_branch]
-symbol = "🌱 "
-style = "green"
+symbol = "on "
+style = "bold purple"
+format = " [$symbol$branch](bold purple)"
 
 [character]
-success_symbol = "[❯](bold green) "
-error_symbol = "[❯](bold red) "
+success_symbol = "[\\$](bold white) "
+error_symbol = "[\\$](bold red) "
+
+[nodejs]
+format = " [node $version](bold blue)"
+disabled = false
 
